grpc_client/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
spec:
  selector:
    app: grpc-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
